--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -1,3 +1,6 @@
 <div class=“message”>
-  <p><%= chat.statement %></p>
+
+  <p><b><%=User.find(message.user_id).name%>:</b> <%= message.statement %><p>
+
+
 </div>
