--- a/app/views/chats/_chat_form.html.erb
+++ b/app/views/chats/_chat_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_for concert_shared_experiences_path, remote: true, authenticity_token: true do |f| %>
+<%= form_for :message, url: "/concerts/#{@concert.id}/shared_experiences", remote: true, authenticity_token: true do |f| %>
   <%= f.label :say_something %>:
   <%= f.text_field :statement, class: "form-control", data: {textarea: "message"} %>
-  <%= f.hidden_field :concert_id, value: @concert.id %>
+  <%= f.hidden_field :chat_box_id, value: @chat_box.id %>
   <%= f.submit "send", style: 'display:none', class: "target_this", data: {send: "message"} %>
 <% end %>
 <br>
