--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <!-- https://bootswatch.com/simplex/ -->
     <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.7/simplex/bootstrap.min.css' />
     <style href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></style>
+    <!-- <script type="text/javascript" src="/javascripts/jcarousel/jquery.jcarousel.js"></script> -->
 
   </head>
 
