--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,12 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div class='container'>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-
-      <%= yield %>
-    </div>
+    <% if (notice != nil || alert != nil) %>
+        <div class='container'>
+          <p class="notice"><%= notice %></p>
+          <p class="alert"><%= alert %></p>
+        </div>
+    <% end %>
+    <%= yield %>
   </body>
 </html>
