--- a/app/views/shared_experiences/index.html.erb
+++ b/app/views/shared_experiences/index.html.erb
@@ -1,25 +1,34 @@
-<h1><%= @concert.title %></h1>
-<div class="row">
-<% # => binding.pry %>
-  <%= render partial: 'videos/video_carousel', locals: {media: @media} %>
-</div>
-<div class="row">
-  <% #binding.pry %>
-  <%= render partial: 'videos/video_submit' %>
-  <% #binding.pry %>
-</div>
-<div class="row col-md-8">
-
-<div class="panel panel-default" id="chatbox">
-  <% if @messages.any? %>
-    <div class="panel-body" id="messages">
-      <%= render partial: 'chats/chat', collection: @messages, as: :message %>
+<div class="container">
+    <!-- <div class="row">
+      <h1><%= @concert.title %></h1>
+    </div> -->
+  <div class="row">
+    <% # => binding.pry %>
+      <%= render partial: 'videos/video_carousel', locals: {media: @media} %>
     </div>
-  <%else%>
-    <div class="panel-body hidden" id="messages">
+    <div class="row">
+      <% #binding.pry %>
+      <%= render partial: 'videos/video_submit' %>
+      <% #binding.pry %>
+  </div>
+  <div class="row">
+    <div class="col-lg-8">
+      <div class="panel panel-default" id="chatbox">
+        <% if @messages.any? %>
+          <div class="panel-body" id="messages">
+            <%= render partial: 'chats/chat', collection: @messages, as: :message %>
+          </div>
+        <%else%>
+          <div class="panel-body hidden" id="messages">
+          </div>
+        <%end%>
+      </div>
+      <%= render partial: 'chats/chat_form', locals: {message: @message, concert: @concert}%>
     </div>
-  <%end%>
-</div>
-
-  <%= render partial: 'chats/chat_form', locals: {message: @message, concert: @concert}%>
+    <div class="col-lg-4">
+      <div>
+        <button class="btn btn-default" type="submit">Button</button>
+      </div>
+    </div>
+  </div>
 </div>
