--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -15,7 +15,7 @@
     <p>longitude: <%= @location.longitude %></p>
   </div>
   <div class='col-lg-6'>
-  <%= render 'google_map'%>
+  <!-- <!-- <%= render 'google_map'%> --> -->
   </div>
 
 </div>
