--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,23 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
+<nav class="navbar navbar-light bg-faded">
+  <!-- <div class="container-fluid"> -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button>
+      </button> -->
       <a class="navbar-brand" href="/">Chicago event connect</a>
     </div>
+    <% if @concert != nil %>
+      <form class="form-inline" role="search" action=<%= "/concerts/#{@concert.id}/shared_experiences/media_search" %> >
+          <input type="hidden" _method="get">
+          <!-- <input type="hidden" name="concert_id" value=<%= @concert.id %> > -->
+          <input type="text" name="query" class="form-control mr-sm-2 border border-dark" placeholder="Search for media by user">
+        <button type="submit" class="btn my-2 my-sm-0 border border-dark">search for media by user</button>
+      </form>
+    <% end %>
 
-   <!--  <form class="navbar-form navbar-left" role="search" action="/locations/search" method="get">
-      <div class="form-group">
-        <input type="text" name="q" class="form-control" placeholder="Find art near...">
-      </div>
-      <button type="submit" class="btn btn-default">Find a Landmark</button>
-    </form>
- -->
     <ul class='nav navbar-nav navbar-right'>
       <% if current_user %>
         <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
@@ -25,5 +26,5 @@
         <li><%= link_to 'Login', new_user_session_path %></li>
       <% end %>       
     </ul>
-  </div>
+  <!-- </div> -->
 </nav>
