multi room implemented, twitter feed working, scrolling jcarousel

--- a/app/views/shared_experiences/index.html.erb
+++ b/app/views/shared_experiences/index.html.erb
@@ -33,3 +33,9 @@
     </div>
   </div>
 </div>
+
+
+<%= javascript_include_tag params[:controller] %>
+<%= javascript_include_tag 'cable' %>
+<%= javascript_include_tag 'channels/room' %>
+<%= action_cable_meta_tag %>
