--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,26 +1,47 @@
-<div class='page-header'>
-  <h1>Todays Shows</h1>
+
+<!-- <div class="jumbotron py-3 bg-light border-0"> -->
+  <div class="container py-3 mt-3" style="background-color: lightgray">
+    <div class="row">
+      <div class='col-md-4 offset-md-2'>
+        <h5>Connect around music</h5>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 offset-md-4">
+        <h1 class="display-3">Gigshare</h1>
+      </div>
+    </div>
+
+    
+  </div>
+
+  <!-- <div class="container-fluid"> -->
+    <!-- <div class='page-header'> -->
+    
+    <!-- </div> -->
+  <!-- </div> -->
+<!-- </div> -->
+<div class="container">
+  <table class='table table-striped table-hover'>
+    <thead>
+      <tr>
+        <th>Show</th>
+        <th>description</th>
+        <th>ticket_info</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @concerts.each do |concert|%>
+      <tr>
+        <td><%= link_to concert.title, concert_shared_experiences_path(concert_id: concert.id) %></td>
+        <td><%= concert.description %></td>
+        <td><%= concert.ticket_info %></td>
+
+      </tr>
+      <% end %>
+    </tbody>
+
+    
+  </table>
 </div>
-
-<table class='table table-striped table-hover'>
-  <thead>
-    <tr>
-      <th>Show</th>
-      <th>description</th>
-      <th>ticket_info</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @concerts.each do |concert|%>
-    <tr>
-      <td><%= link_to concert.title, concert_shared_experiences_path(concert_id: concert.id) %></td>
-      <td><%= concert.description %></td>
-      <td><%= concert.ticket_info %></td>
-
-    </tr>
-    <% end %>
-  </tbody>
-
-  
-</table>
