--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,11 @@
     <link rel='stylesheet' href='https://bootswatch.com/4/lux/bootstrap.min.css' />
 
     <!-- <script type="text/javascript" src="/javascripts/jcarousel/jquery.jcarousel.js"></script> -->
-
+  <%= render 'layouts/header' %>
   </head>
 
-  <body>
-    <%= render 'layouts/header' %>
+  <body style="padding-top: 40px">
+    
     <% if notice != nil %>
         <div class='container alert-warning' >
           <h4 class="notice"><%= notice %></h4>
