--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -11,6 +11,12 @@
         <h1 class="display-3">Gigshare</h1>
       </div>
     </div>
+    <form action='/concerts' class="form float-right" >
+      <input name="authenticity_token" value="<%= form_authenticity_token %>" 
+      _method="get" type="hidden">
+      <input type="date" name="date" placeholder="http://.../embed/...">
+      <button type="submit" id="media_submit" >submit</button>
+    </form>
 
     
   </div>
@@ -22,6 +28,7 @@
   <!-- </div> -->
 <!-- </div> -->
 <div class="container">
+  
   <table class='table table-striped table-hover'>
     <thead>
       <tr>
