--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Eventshares</title>
     <%= csrf_meta_tags %>
@@ -7,26 +7,18 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-
-    <!-- <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' /> -->
-    <!-- https://bootswatch.com/simplex/ -->
-    <!-- <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.7/simplex/bootstrap.min.css' />
-    <style href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></style> -->
-
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <link rel='stylesheet' href='https://bootswatch.com/4/lux/bootstrap.min.css' />
 
-    <!-- <script type="text/javascript" src="/javascripts/jcarousel/jquery.jcarousel.js"></script> -->
   <%= render 'layouts/header' %>
   </head>
 
-  <body style="padding-top: 40px">
+  <body style="padding-top: 50px">
     
     <% if notice != nil %>
         <div class='container alert-warning' >
           <h4 class="notice"><%= notice %></h4>
-          <!-- <p class="alert"><%= alert %></p> -->
         </div>
     <% elsif alert != nil %>
       <div class='container alert-warning' >
