--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -1,6 +1,6 @@
 <div class=“message”>
 
-  <p><b><%=User.find(message.user_id).name%>:</b> <%= message.statement %><p>
+  <p><b class='font-weight-bold text-dark'><%=User.find(message.user_id).name%>:</b> <%= message.statement %><p>
 
 
 </div>
