--- a/app/views/twitter/_tweets.html.erb
+++ b/app/views/twitter/_tweets.html.erb
@@ -1,5 +1,3 @@
 
-  <div class="list-group" id="tweets">
-       
-          
-  </div>
+ <div class='list-group-item' name=<%= tweet.twitterID %> > <%=tweet.message %> </div>   
+
