--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -9,14 +9,18 @@
 }
 
 #tweets {
-  max-height: 400px;
+  max-height: 500px;
   overflow: hidden;
-  overflow-y:scroll;
+  overflow-y: scroll;
 }
 
 #messages {
     height: 400px;
     border-style: none;
+}
+
+#tweet-card {
+   /*max-height: 500px; */
 }
 
 /*.jcarousel {
