fixes to tweets and video
fixed js loading

fixed issue with reloading js for each room

trying again

partially removing turbolinks

?

trying again

trying again

removing tl

fixed tweets

fixed msg

added icon

major changes to submit

added link page

small changes

some changes

hopefully done

fix to controller

fixed date

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -9,7 +9,7 @@
 }
 
 #tweets {
-  max-height: 500px;
+  height: 400px;
   overflow: hidden;
   overflow-y: scroll;
 }
@@ -23,6 +23,21 @@
    /*max-height: 500px; */
 }
 
+.brand-holder {
+    text-align:center;
+}
+
+.brand-icon {
+    max-width: 100px;
+}
+
+.tweet {
+    /*padding: 25px;*/
+}
+
+#tweets {
+    overflow-y: scroll
+}
 /*.jcarousel {
     position: relative;
     overflow: hidden;
