--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -5,28 +5,31 @@
       <div class='col-md-4 offset-md-2'>
         <h5>Connect around music</h5>
       </div>
+      <div class='col-md-2 offset-md-4 brand-holder'>
+        <div>
+          Special thanks to:
+        </div>
+        <a href="https://dostuffmedia.com/" target="_blank">
+            <%= image_tag 'do_stuff.png', class: "brand-icon" %>
+        </a>
+      </div>
     </div>
     <div class="row">
       <div class="col-md-4 offset-md-4">
-        <h1 class="display-3">Gigshare</h1>
+        <h1 class="display-3">Gigshare</h1>  
       </div>
     </div>
+    
     <form action='/concerts' class="form float-right" >
       <input name="authenticity_token" value="<%= form_authenticity_token %>" 
       _method="get" type="hidden">
-      <input type="date" name="date" placeholder="http://.../embed/...">
+      <input type="date" name="date" value=<%= @date %> >
       <button type="submit" id="media_submit" >submit</button>
     </form>
 
     
   </div>
 
-  <!-- <div class="container-fluid"> -->
-    <!-- <div class='page-header'> -->
-    
-    <!-- </div> -->
-  <!-- </div> -->
-<!-- </div> -->
 <div class="container">
   
   <table class='table table-striped table-hover'>
@@ -41,7 +44,7 @@
     <tbody>
       <% @concerts.each do |concert|%>
       <tr>
-        <td><%= link_to concert.title, concert_shared_experiences_path(concert_id: concert.id) %></td>
+        <td><%= link_to concert.title, concert_shared_experiences_path(concert_id: concert.id, date: @date) %></td>
         <% description = concert.description %>
         <td><%= raw(description) %></td>
         <td><%= concert.ticket_info %></td>
