--- a/app/views/twitter/_tweets.html.erb
+++ b/app/views/twitter/_tweets.html.erb
@@ -1,3 +1,3 @@
 
- <div class='list-group-item' name=<%= tweet.twitterID %> > <%=tweet.message %> </div>   
+ <div class='list-group-item tweet my-10' name=<%= tweet.twitterID %> > <%=tweet.message %> </div>   
 
