--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,30 +1,29 @@
-<nav class="navbar navbar-light py-1 fixed-top" style="background-color: darkgray">
-  <!-- <div class="container-fluid"> -->
-    <div class="navbar-header">
-      <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button> -->
-      <a class="navbar-brand" href="/">Chicago event connect</a>
-    </div>
-    <% if @concert != nil %>
-      <form class="form-inline" role="search" action=<%= "/concerts/#{@concert.id}/shared_experiences/media_search" %> >
-          <input type="hidden" _method="get">
-          <!-- <input type="hidden" name="concert_id" value=<%= @concert.id %> > -->
-          <input type="text" name="query" class="form-control-sm border border-dark input-sm" placeholder="user name">
-        <button type="submit" class="btn-sm border border-dark">search for media by user</button>
-      </form>
-    <% end %>
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse py-1 fixed-top">
+ 
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <ul class='nav navbar-nav navbar-right'>
+  <a class="navbar-brand" href="/">Chicago event connect</a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class='navbar-nav mr-auto'>
       <% if current_user %>
-        <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+        <li class="nav-item"><%= link_to 'Logout', destroy_user_session_path, method: :delete, :class => "nav-link" %></li>
       <% else %>
-        <li><%= link_to 'Register', new_user_registration_path %></li>
-        <li><%= link_to 'Login', new_user_session_path, data: {referrer: request.fullpath} %></li>
+        <li class="nav-item"><%= link_to 'Register', new_user_registration_path, :class => "nav-link" %></li>
+        <li class="nav-item"><%= link_to 'Login', new_user_session_path, data: {referrer: request.fullpath}, :class => "nav-link" %></li>
       <% end %>       
     </ul>
-  <!-- </div> -->
+  
+
+  <% if @concert != nil %>
+      <form class="form-inline pull-right" role="search" action=<%= "/concerts/#{@concert.id}/shared_experiences/media_search" %> >
+          <input type="hidden" _method="get">
+          <input type="text" name="query" class="form-control mr-sm-2" placeholder="user name">
+        <button type="submit" class="btn btn-outline-success my-2 my-sm-0">search for media</button>
+      </form>
+  <% end %>
+</div>
+  
 </nav>
