--- a/app/views/shared_experiences/index.html.erb
+++ b/app/views/shared_experiences/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
    
   <div class="row">
@@ -41,8 +42,6 @@
   </div>
 </div>
 
-
-<%= javascript_include_tag params[:controller] %>
+<%= javascript_include_tag 'room_related', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'cable' %>
-<%= javascript_include_tag 'channels/room' %>
 <%= action_cable_meta_tag %>
