--- a/app/views/shared_experiences/index.html.erb
+++ b/app/views/shared_experiences/index.html.erb
@@ -44,6 +44,6 @@
 
 <%= action_cable_meta_tag %>
 
-<%= javascript_include_tag 'room_related', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag 'room_related' %>
 
 
