--- a/app/views/shared_experiences/index.html.erb
+++ b/app/views/shared_experiences/index.html.erb
@@ -28,10 +28,10 @@
     <div class="col-lg-4">
       <div class="card">
         <div class="list-group" id="tweets">
-          <% if @messages.any? %>
+          <% if @tweets.any? %>
             <%= render partial: 'twitter/tweets', collection: @tweets, as: :tweet %> 
           <% else %>
-            <div class='list-group-item' id="no-tweets" style=""> no tweets available </div>  
+            <div class='list-group-item' id="no-tweets"> no tweets available </div>  
           <% end %>
         </div>
       </div>
