--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -5,10 +5,18 @@
       <div class='col-md-4 offset-md-2'>
         <h5>Connect around music</h5>
       </div>
+      <div class='col-md-2 offset-md-4 brand-holder'>
+        <div>
+          Special thanks to:
+        </div>
+        <a href="https://dostuffmedia.com/" target="_blank">
+           <%=image_tag("do_stuff.png", class: "brand-icon")%>
+        </a>
+      </div>
     </div>
     <div class="row">
       <div class="col-md-4 offset-md-4">
-        <h1 class="display-3">Gigshare</h1>
+        <h1 class="display-3">Gigshare</h1>  
       </div>
     </div>
     <form action='/concerts' class="form float-right" >
