--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,8 @@
       <% else %>
         <li class="nav-item"><%= link_to 'Register', new_user_registration_path, :class => "nav-link" %></li>
         <li class="nav-item"><%= link_to 'Login', new_user_session_path, data: {referrer: request.fullpath}, :class => "nav-link" %></li>
-      <% end %>       
+      <% end %>
+        <li class="nav-item"><%= link_to 'About', about_path, :class => "nav-link" %></li>       
     </ul>
   
 
