--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -10,7 +10,7 @@
           Special thanks to:
         </div>
         <a href="https://dostuffmedia.com/" target="_blank">
-           <img src=<%=image_url("do_stuff.png")%> class="brand-icon" >
+            <%= image_tag 'do_stuff.png', class: "brand-icon" %>
         </a>
       </div>
     </div>
